XEP style: fix CVE background in dark mode

--- a/xmpp.css
+++ b/xmpp.css
@@ -1712,6 +1712,10 @@
     figure.example {
         background-color: #282828;
     }
+    figure.cve {
+        border: 5px solid rgba(120, 0, 0, 1.0);
+        background-color: #200000;
+    }
 
     .box {
         color: #ccc;
